3.0/_sources/reference/generated/pydicom.dataset.FileDataset.rst.txt
pydicom.dataset.FileDataset
===========================

.. currentmodule:: pydicom.dataset

.. autoclass:: FileDataset

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~FileDataset.__init__
      ~FileDataset.add
      ~FileDataset.add_new
      ~FileDataset.add_new_private
      ~FileDataset.clear
      ~FileDataset.compress
      ~FileDataset.convert_pixel_data
      ~FileDataset.copy
      ~FileDataset.data_element
      ~FileDataset.decode
      ~FileDataset.decompress
      ~FileDataset.dir
      ~FileDataset.elements
      ~FileDataset.ensure_file_meta
      ~FileDataset.formatted_lines
      ~FileDataset.from_json
      ~FileDataset.get
      ~FileDataset.get_item
      ~FileDataset.get_private_item
      ~FileDataset.group_dataset
      ~FileDataset.items
      ~FileDataset.iterall
      ~FileDataset.keys
      ~FileDataset.overlay_array
      ~FileDataset.pixel_array_options
      ~FileDataset.pop
      ~FileDataset.popitem
      ~FileDataset.private_block
      ~FileDataset.private_creators
      ~FileDataset.remove_private_tags
      ~FileDataset.save_as
      ~FileDataset.set_original_encoding
      ~FileDataset.set_pixel_data
      ~FileDataset.setdefault
      ~FileDataset.to_json
      ~FileDataset.to_json_dict
      ~FileDataset.top
      ~FileDataset.trait_names
      ~FileDataset.update
      ~FileDataset.update_raw_element
      ~FileDataset.values
      ~FileDataset.walk
      ~FileDataset.waveform_array
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~FileDataset.default_element_format
      ~FileDataset.default_sequence_element_format
      ~FileDataset.indent_chars
      ~FileDataset.is_implicit_VR
      ~FileDataset.is_little_endian
      ~FileDataset.is_original_encoding
      ~FileDataset.original_character_set
      ~FileDataset.original_encoding
      ~FileDataset.pixel_array
      ~FileDataset.read_encoding
      ~FileDataset.read_implicit_vr
      ~FileDataset.read_little_endian
   
   